currency converter app done

--- a/public/currency.html
+++ b/public/currency.html
@@ -11,8 +11,8 @@
     <header>
         <h1>Currency Converter</h1>
         <nav>
-            <a href="index.html">Hotel Search</a>
-            <a href="currency.html" class="active">Currency Converter</a>
+            <a href="index.html">Currency Converter</a>
+            <a href="currency.html" class="active">Advance Currency Converter</a>
         </nav>
     </header>
 
